--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,14 +8,9 @@
       margin-right: 3rem
     &__button
       margin-right: 1.35rem
-@media screen and ( max-width: 1439px )
-  .container
-    width: 87%
 @media screen and ( max-width: 1240px )
   html
     font-size: 12px
-  .container
-    width: 85%
   .nav
     &__item
       margin-right: 1rem
@@ -33,8 +28,7 @@
       margin-left: 0
 @media screen and ( max-width: 570px )
   .container
-    width: 100%
-    max-width: 339px
+    width: 90%
   .contacts
     &__phone
       margin-right: 0
